# pa9

./: .gitignore.exapmle  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp  output.txt  output3.txt  phi_1.csv  phi_2.csv  phi_3.csv  phi_4.csv  phi_5.csv
include/: interface.hpp  interfase.hpp  matrix.hpp  plotter.hpp
tests/: CMakeLists.txt  matrix_test.cpp
